--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-lazyload": "^3.2.1",
     "react-router-dom": "6.22.3"
   },
   "devDependencies": {
