--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-lazyload": "^3.2.1",
-    "react-router-dom": "6.22.3"
+    "react-router-dom": "6.22.3",
+    "sonner": "1.5.0"
   },
   "devDependencies": {
     "@types/react": "18.2.66",
